# voluntier

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitignore.new  .spark-initial-sha  CHANGELOG.md  DOCKER.md  DOCUMENT_UPLOAD_README.md  Dockerfile  PRD.md  README.md  SECURITY.md  TEMPORAL_ADVANCED_FEATURES.md  TEMPORAL_INTEGRATION.md  VERIFICATION.md  alembic.ini  docker-compose.yaml  index.html  main.py  package-lock.json  package.json  pyproject.toml  runtime.config.json  tsconfig.json
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 20251029_1724-a6e983422c84_update_user_verification_to_scaled_score.py
app/: config.py  database.py  worker.py
app/activities/: __init__.py  local.py  verification.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  verification.py
app/core/: __init__.py  interceptors.py  security.py
app/examples/: child_workflows.py  heartbeating.py  search_attributes.py
app/models/: __init__.py  match.py  opportunity.py  review.py  user.py
app/schemas/: __init__.py  auth.py  verification.py
app/workflows/: __init__.py  reputation.py  verification.py  verification_subworkflows.py
backend/: .env.example  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
backend/config/: prometheus.yml
backend/scripts/: init-db.sql  setup.sh
backend/src/voluntier/: __init__.py  cli.py  config.py  database.py  dependencies.py
backend/src/voluntier/api/: main.py  memory.py  security.py
backend/src/voluntier/api/routes/: __init__.py  auth.py  events.py  notifications.py  organizations.py  temporal.py  users.py
backend/src/voluntier/config/: security.py
backend/src/voluntier/memory/: __init__.py  graph_memory.py  hybrid_memory.py  memory_types.py  vector_memory.py
backend/src/voluntier/middleware/: __init__.py  logging.py  metrics.py  security.py
backend/src/voluntier/models/: __init__.py
backend/src/voluntier/services/: __init__.py  approval.py  audit_service.py  auth.py  graph.py  honeypot_system.py  llm.py  memory.py  memory_service.py  security_service.py  threat_detection.py  validation_service.py  verification.py
backend/src/voluntier/temporal_worker/: main.py
backend/src/voluntier/temporal_workflows/: __init__.py  integration_workflows.py  memory_workflows.py  schemas.py  support_workflows.py  workflows.py
backend/src/voluntier/temporal_workflows/activities/: __init__.py  auth_activities.py  data_activities.py  document_activities.py  event_activities.py  llm_activities.py  notification_activities.py  security_activities.py  volunteer_activities.py
backend/src/voluntier/utils/: exceptions.py  logging.py  stubs.py  validation.py
backend/tests/: test_memory_system.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  FRONTEND.md  QUICK_START.md  README.md  SETUP.md  organization-event-management.md
nginx/: nginx.conf
scripts/: docker-start.sh  init-db.sh
src/: App.tsx  index.css  prd.md  vite-end.d.ts
src/components/: EventCard.tsx  Header.tsx  ImpactTracker.tsx  OrganizationDashboard.tsx  ProfileSetup.tsx  QRVerificationSystem.tsx  SecurityDashboard.tsx  SignupFlow.tsx  TelemetryDashboard.tsx  TestAccountLogin.tsx
src/components/auth/: PrivilegeGuard.tsx  SignInForm.tsx
src/components/landing/: LandingPage.tsx
src/components/notifications/: NotificationCenter.tsx
src/components/onboarding/: BusinessOnboarding.tsx  IndividualOnboarding.tsx  OnboardingProgressTracker.tsx  OrganizationOnboarding.tsx
src/components/profiles/: BusinessProfileView.tsx  IndividualProfileView.tsx  OrganizationProfileView.tsx  UnifiedProfileView.tsx
src/components/signup/: BusinessSignupForm.tsx  IndividualSignupForm.tsx  OrganizationSignupForm.tsx
src/components/upload/: BulkDocumentUpload.tsx  EnhancedDocumentUpload.tsx  SecureDocumentUpload.tsx
src/components/verification/: DocumentVerification.tsx
src/data/: sampleData.ts  testAccounts.ts
src/hooks/: useLocalStorage.ts
src/services/: auth.tsx  documentPreprocessor.ts  documentUpload.ts  mlDocumentVerifier.ts  notifications.ts  onboardingAnalytics.ts  pdfGenerator.ts  simplifiedMLVerifier.ts  telemetry.ts  temporalWorkflowService.ts  verificationOrchestrator.ts  verificationWorkflow.ts
src/types/: auth.ts  documents.ts  onboarding.ts  privileges.ts  profiles.ts  verification.ts
src/utils/: pdfGenerator.ts
tests/: conftest.py  test_auth.py  test_phase1_integration.py
